modules/gdscript/tests/scripts/analyzer/errors/outer_class_instance_constants.gd
class Outer:
	const OUTER_CONST: = 0
	class Inner:
		pass

func test() -> void:
	var instance: = Outer.Inner.new()
	print(instance.OUTER_CONST)
